--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -5,7 +5,7 @@ version = "0.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2024-12-12
 update_date = 2024-12-17
-desc = "https://github.com/errrr-er/alll/tree/main \n汇报错误等请使用“.draw魔典反馈”"
+desc = "https://github.com/errrr-er/alll/tree/main"
 update_Urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml"
@@ -20,6 +20,7 @@ update_Urls = [
 # 中：
 # 海豹内置查询文档
 # 克苏鲁神话魔法大典1.1.2
+# https://www.bilibili.com/opus/853115006210801681
 
 # 日：
 # https://trpg-yaruo.com/jyumon/
@@ -28,14 +29,15 @@ update_Urls = [
 # 英：
 # the-grand-grimoire-of-cthulhu-mythos-magic
 
-# 整体顺序按照"中日英魔法大典_仅名称.xlsx"排序
-# 牌堆内未收集到的在excel表内标明黄
+# 整体顺序按照"旧版手册呪文_仅名称.xlsx"排序
+# 牌堆内未收集到的在excel表内标有各类颜色
+# 详细颜色解释已放在表内"Synonym"一栏
 
 
 
 
 
-["魔典整合"]
+["mhelp"]
 export = true
 visible = true
 
@@ -47,23 +49,6 @@ dictinct = true
 options_urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic.json",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic.json"
-]
-
-
-
-
-["魔典反馈"]
-export = true
-visible = true
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/feedback.json",
-  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/feedback.json"
 ]
 
 
