--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -77,6 +77,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "恶魔揭露术","UNMASKDEMON","UnmaskDemon"]
+options = []
 
 # 提取云
 cloud_extra = true
