--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -58,6 +58,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "魔鬼逐出术","CASTOUTDEVIL","CastOutTheDevil"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -97,6 +98,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "梦魇术","NIGHTMARE","Nightmare"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -116,6 +118,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "阿撒托斯的恐怖诅咒","DREADCURSEOFAZATHOTH","DreadCurseofAzathoth"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -135,6 +138,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "阿布霍斯唤醒术","AWAKEABHOTH","AwakeAbhoth"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -154,6 +158,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "黑暗诅咒","CURSEOFDARKNESS","CurseofDarkness"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -173,6 +178,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "耶德·艾塔德放逐术","BANISHMENTOFYDEETAD","BanishmentofYdeEtad"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -192,6 +198,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "伊希斯的封印","SEALOFISIS","SealofIsis"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -211,6 +218,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "石板诅咒","CURSEOFTHESTONE","CurseoftheStone"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -230,6 +238,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "枯萎术","SHRIVELLING","Shrivelling"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -249,6 +258,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "生命食粮术","FOODOFLIFE","FoodofLife"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -268,6 +278,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "伊本-加齐之粉","POWDEROFIBN-GHAZI","PowderofIbn-Ghazi"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -287,6 +298,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "治愈法","HEAL","Healing"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -306,6 +318,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "维瑞之印","VOORISHSIGN","VoorishSign"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -325,6 +338,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "相似的敏锐","KEENNESSOFTWOALIKE","KeennessofTwoAlike"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -344,6 +358,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "伊波恩雾轮术","EIBON'SWHEELOFMIST","Eibon'sWheelofMist"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -363,6 +378,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "瘟疫召唤术","SUMMONPLAGUE","SummonPlague"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -382,6 +398,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "瘟疫发生术","BRINGPESTILENCE","BringPestilence"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -401,6 +418,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "续命术","EXTEND","ExtendLife"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -420,6 +438,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "黄金蜂蜜酒酿造术","BREWSPACE-MEAD","BrewSpaceMead"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -439,6 +458,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "灵魂分配术","APPORTIONKA","ApportionKa"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -458,6 +478,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "完善术","PERFECTION","Perfection"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -477,6 +498,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "记忆模糊术","CLOUDMEMORY","CloudMemory"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -496,6 +518,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "迷身术","ENTHRALLVICTIM","EnthrallVictim"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -515,6 +538,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "反转移术","DETRANSFERENCE","Detransference"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -534,6 +558,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "生命偷取术","STEALLIFE","StealLife"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -553,6 +578,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "疯狂之笛","PIPESOFMADNESS","PipesofMadness"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -572,6 +598,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "恐惧植入术","IMPLANTFEAR","ImplantFear"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -591,6 +618,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "飘浮术","LEVITATE","Levitate"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -610,6 +638,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "克苏鲁抓攫术","GRASPOFCTHULHU","GraspofCthulhu"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -629,6 +658,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "腐烂外皮之诅咒","CURSEOFTHEPUTRIDHUSK","CurseofthePutridHusk"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -648,6 +678,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "蝙蝠化形法","BATFORM","BatForm"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -667,6 +698,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "蛇臂术","HANDSOFCOLUBRA","HandsofColubra"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -686,6 +718,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "戈尔戈罗斯形体扭曲术","BODYWARPINGOFGORGOROTH","BodyWarpingofGorgoroth"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -705,6 +738,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "遗恨术","REMORTIFICATION","Remortification"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -724,6 +758,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "诱鱼术","ATTRACTFISH","AttractFish"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -743,6 +778,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "灵魂漫游术","WANDERINGSOUL","WanderingSoul"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -762,6 +798,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "致盲术","CAUSE","Cause"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -781,6 +818,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "治盲术","CUREBLINDNESS","CureBlindness"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -800,6 +838,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "时空门创造术","CREATETIMEGATE","CreateGate"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -819,6 +858,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "自保袋创造术","CREATESELF-WARD","CreateSelf-Ward"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -838,6 +878,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "死之发送术","SENDINGOFTHEDEAD","SendingoftheDead"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -857,6 +898,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "坏尸粉创造术","CREATEBAD-CORPSEDUST","CreateBad-CorpseDust"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -876,6 +918,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "支配术","DOMINATE","Dominate"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -895,6 +938,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "邪眼术","EVILEYE","EvilEye"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -914,6 +958,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "夏恩逐出术","CASTOUTSHAN","CastOutShan"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -933,6 +978,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "消失术","VANISH","Vanish"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -952,6 +998,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "深渊之息","BREATHOFTHEDEEP","BreathoftheDeep"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -971,6 +1018,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "心跳停止术","STOPHEART","StopHeart"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -990,6 +1038,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "身体部件转移术","TRANSFERBODYPART","TransferBodyPart"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1009,6 +1058,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "兽化人束缚术","BINDLOUP-GAROU","BindWere-Creature"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1028,6 +1078,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "占卜窗创造术","CREATESCRYINGWINDOW","CreateScryingWindow"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1047,6 +1098,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "灵体猎手变身术","BECOMESPECTRALHUNTER","BecomeSpectralHunter"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1066,6 +1118,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "哈布沙暴发生术","BRINGHABOOB","SANDSTORM","BringHaboob"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1085,6 +1138,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "苏莱曼之尘","DUSTOFSULEIMAN","DustofSuleiman"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1104,6 +1158,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "精神交换术","MINDEXCHANGE","MindExchange"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1123,6 +1178,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "心理暗示术","MENTALSUGGESTION","MentalSuggestion"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1142,6 +1198,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "精神转移术","MINDTANSFER","MindTransfer"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1161,6 +1218,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "魔力吸取术","POWERDRAIN","PowerDrain"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1180,6 +1238,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "生命觉察术","SENSELIFE","SenseLife"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1199,6 +1258,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "塞壬之歌","SIREN'SSONG","Siren'sSong"]
+options = []
 
 # 提取云
 cloud_extra = true
@@ -1218,6 +1278,7 @@ options_urls = [
 export = true
 visible = true
 aliases = [ "","",""]
+options = []
 
 # 提取云
 cloud_extra = true
